<resources>
    <string name="app_name">Calculator</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_erase">C</string>
    <string name="key_divide">/</string>
    <string name="key_multiply">*</string>
    <string name="key_subtract">-</string>
    <string name="key_fold">+</string>
    <string name="key_calc">=</string>
    <string name="zero">0</string>
</resources>